<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity"
    android:background="@drawable/glassmorphisebg">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_github"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:src="@drawable/ic_github"
            android:contentDescription="@string/image_github"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_toStartOf="@+id/ic_github"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_greetings"
                style="@style/textColor.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_night_reviewer"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_line_braker_header"
                android:contentDescription="@string/image_lines_breaker"/>

            <TextView
                style="@style/textColor.Thin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            style="@style/textColor.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/lets_find_your_favorite_users"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:textSize="14sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_corner_radius_top"
            android:alpha="0.2"
            android:contentDescription="@string/image_bg_layout_sheet"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_list_user"
            android:padding="16dp"/>
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>