<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/glassmorphisebg"
    >
        <RelativeLayout
            android:id="@+id/blurry_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/image_bg"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="50dp"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="32dp"
                android:layout_centerHorizontal="true"/>

            <io.alterac.blurkit.BlurLayout
                android:id="@+id/blur_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:alpha="0.2"
                app:blk_blurRadius="10"
                app:blk_downscaleFactor="0.07"
                app:blk_fps="0" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btn_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:src="@drawable/bg_button_glassmorph"
                android:alpha="0.2"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_chevron_left"
                android:padding="6dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_front_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                app:civ_border_overlay="true"/>
            <LinearLayout
                android:id="@+id/ll_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/avatar_profile"
                android:layout_marginTop="16dp">
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textColor.Bold"
                    android:text="@string/dummy_text"
                    android:textAlignment="center"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_real_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textColor.Regular"
                    android:text="@string/dummy_text"
                    android:textAlignment="center"
                    android:layout_marginVertical="8dp"
                    android:textSize="12sp"/>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_text"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp">
                <LinearLayout
                    android:id="@+id/ll_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="16dp">
                    <RelativeLayout
                        android:id="@+id/rl_repo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        tools:layout_editor_absoluteX="16dp"
                        android:layout_marginEnd="4dp">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_card_glassmorph"
                            android:alpha="0.2"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_repo"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_margin="4dp"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="6dp">
                            <TextView
                                android:id="@+id/tv_repo_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero_dummy"
                                android:layout_alignParentBottom="true"
                                style="@style/textColor.Thin"
                                android:textSize="26sp"
                                android:layout_marginStart="16dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/repository"
                                android:layout_alignParentBottom="true"
                                android:layout_toEndOf="@+id/tv_repo_value"
                                style="@style/textColor.Regular"
                                android:layout_marginStart="4dp"/>
                        </RelativeLayout>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/rl_location"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        tools:layout_editor_absoluteX="16dp"
                        android:layout_marginStart="4dp">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_card_glassmorph"
                            android:alpha="0.2"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_location"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_margin="4dp"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="6dp"
                            android:paddingHorizontal="6dp">
                            <TextView
                                android:id="@+id/tv_location_lable"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/location"
                                style="@style/textColor.Regular"
                                android:textSize="20sp"/>
                            <TextView
                                android:id="@+id/tv_location_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dummy_text"
                                android:layout_below="@+id/tv_location_lable"
                                style="@style/textColor.Thin"
                                android:textSize="12sp"
                                android:maxLines="2"
                                android:ellipsize="end"/>
                        </RelativeLayout>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/ll_1"
                    android:orientation="horizontal"
                    android:layout_marginVertical="16dp">
                    <RelativeLayout
                        android:id="@+id/rl_follower"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        tools:layout_editor_absoluteX="16dp"
                        android:layout_marginEnd="4dp">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_card_glassmorph"
                            android:alpha="0.2"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_follower"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_margin="4dp"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="6dp">
                            <TextView
                                android:id="@+id/tv_follower_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero_dummy"
                                android:layout_alignParentBottom="true"
                                style="@style/textColor.Thin"
                                android:textSize="26sp"
                                android:layout_marginStart="16dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower"
                                android:layout_alignParentBottom="true"
                                android:layout_toEndOf="@+id/tv_follower_value"
                                style="@style/textColor.Regular"
                                android:layout_marginStart="4dp"/>
                        </RelativeLayout>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/rl_following"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        tools:layout_editor_absoluteX="16dp"
                        android:layout_marginStart="4dp">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_card_glassmorph"
                            android:alpha="0.2"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_following"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:layout_margin="4dp"/>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="6dp">
                            <TextView
                                android:id="@+id/tv_following_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero_dummy"
                                android:layout_alignParentBottom="true"
                                style="@style/textColor.Thin"
                                android:textSize="26sp"
                                android:layout_marginStart="16dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:layout_alignParentBottom="true"
                                android:layout_toEndOf="@+id/tv_following_value"
                                style="@style/textColor.Regular"
                                android:layout_marginStart="4dp"/>
                        </RelativeLayout>
                    </RelativeLayout>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/cv_company"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_2"
                    android:layout_marginVertical="16dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_glassmorph"
                        android:alpha="0.2"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_location"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="4dp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="6dp"
                        android:paddingHorizontal="6dp">
                        <TextView
                            android:id="@+id/tv_company_lable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/location"
                            style="@style/textColor.Regular"
                            android:textSize="20sp"/>
                        <TextView
                            android:id="@+id/tv_company_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy_text"
                            android:layout_below="@+id/tv_company_lable"
                            style="@style/textColor.Thin"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:maxLines="2"
                            android:ellipsize="end"/>
                    </RelativeLayout>
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

<!--


-->